--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.1.1",
     "react-globe.gl": "^2.37.0",
     "react-intersection-observer": "^10.0.0",
+    "react-router-dom": "^7.10.1",
     "react-swiper": "^0.1.5",
     "swiper": "^12.0.3",
     "three": "^0.181.2"
