--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost cjsstech.com www.cjsstech.com;
+    server_name localhost;
 
     root /usr/share/nginx/html;
     index index.html;
